# lang-nno-x-ext-apertium

./: .gitmodules  .glottologid.txt  CITATION.cff  Links.md  Makefile.am  Makefile.in  README  README.markdown  README.md  _config.yml  autogen.sh  configure.ac  functions-cg3-src.md  giella-nno.pc.in  grammarchecker-grammarcheckers-tools.md  index-header.md  index.md  language-map.md  manifest.toml  manifest.toml.in  nno.md  root-fst-src.md  src-cg3-disambiguator.cg3.md  src-cg3-functions.cg3.md  src-fst-affixes-symbols.lexc.md  src-fst-morphology-affixes-symbols.lexc.md  src-fst-morphology-root.lexc.md  src-fst-phonetics-txt2ipa.xfscript.md  src-fst-root.lexc.md  src-fst-transcriptions-transcriptor-abbrevs2text.lexc.md  src-fst-transcriptions-transcriptor-numbers-digit2text.lexc.md  src-fst-transcriptions-transcriptor-symbols2text.lexc.md  src-phonetics-txt2ipa.xfscript.md  src-transcriptions-transcriptor-abbrevs2text.lexc.md  src-transcriptions-transcriptor-numbers-digit2text.lexc.md  symbols-affixes-fst-src.md  tools-grammarcheckers-grammarchecker.cg3.md  tools-tokenisers-tokeniser-disamb-gt-desc.pmscript.md  tools-tokenisers-tokeniser-gramcheck-gt-desc.pmscript.md  tools-tokenisers-tokeniser-tts-cggt-desc.pmscript.md  (+1 more)
.github/workflows/: docsygen.yml  spellers.yml
.gut/: delta.toml
doc/: Makefile.am  index.xml  link-header.jspwiki  nno.jspwiki  tabs.xml
docs/: Links.jspwiki  Links.md  _config.yml  index-header.md  language-map.md  link-header.md  nno.md  site.xml
docs/badgedata/: fst-lemmacount.json
docs/typosreport/: report.json
m4/: giella-config-files.m4
src/cg3/: Makefile.am
src/fst/: Makefile.am  root.lexc
src/fst/ext-Apertium-nno/: AUTHORS
src/fst/morphology/: Makefile.am  lemma-count.sh  root.lexc
src/fst/morphology/test/: Makefile.am
src/fst/transcriptions/: transcriptor-abbrevs2text.lexc  transcriptor-symbols2text.lexc
src/morphology/: Makefile.am
src/morphology/affixes/: adjectives.lexc  nouns.lexc  propernouns.lexc  verbs.lexc
src/morphology/stems/: adjectives.lexc  nouns.lexc  numerals.lexc  prefixes.lexc  pronouns.lexc  verbs.lexc
src/syntax/: Makefile.am
tools/analysers/: pipeline.ts
tools/grammarcheckers/: errors-nn.ftl  grammarchecker.cg3  index.xml  pipeline.ts
tools/mt/apertium/tagsets/: README.txt
tools/shellscripts/: Makefile.am
tools/spellcheckers/: Makefile.mod-mobile-hfst.am  index.xml
tools/spellcheckers/fstbased/mobile/hfst/: Makefile.am  index.xml
tools/spellcheckers/fstbased/mobile/vfst/: index.txt
tools/tokenisers/: tokeniser-disamb-gt-desc.pmscript  tokeniser-gramcheck-gt-desc.pmscript
tools/tts/: acro2text.regex  pipeline.ts  text2phontext.regex
